@@ -23,7 +23,7 @@ include(CPack)
 
 OPTION(ENABLE_TAGLIB "Enable TagLib library (required for tag editing, replaygain calculation, device support, etc)" ON)
 OPTION(ENABLE_TAGLIB_EXTRAS "Enable TagLib-Extras library (used by tag editing, replaygain calculation, device support, etc)" ON)
-OPTION(ENABLE_PHONON "Enable Phonon library (required to playback MPD HTTP streams)" OFF)
+OPTION(ENABLE_HTTP_STREAM_PLAYBACK "Enable playback of MPD HTTP streams (Phonon required for Qt4, QtMultimedia for Qt5)" OFF)
 OPTION(ENABLE_KDE "Enable KDE libraries" ON)
 OPTION(ENABLE_QT5 "Build against Qt5" OFF)
 OPTION(ENABLE_MTP "Enable MTP library (required to support MTP devices)" ON)
@@ -39,7 +39,6 @@ OPTION(ENABLE_MUSICBRAINZ "Enable MusicBrianz libraries (either this or CDDB req
 OPTION(ENABLE_LAME "Enable LAME libraries (required for AudioCD playback support)" ON)
 
 if (ENABLE_QT5)
-    set(ENABLE_PHONON FALSE)
     set(ENABLE_KDE FALSE)
 endif (ENABLE_QT5)
 
@@ -252,18 +251,21 @@ if(NOT WIN32)
 endif(NOT WIN32)
 
 IF( ENABLE_KDE )
-    FIND_PACKAGE( KDE4 )
-    IF( KDE4_FOUND )
-        ADD_DEFINITIONS( -DENABLE_KDE_SUPPORT )
-        SET( ENABLE_KDE_SUPPORT TRUE )
-    ENDIF( KDE4_FOUND )
+    FIND_PACKAGE( KDE4 REQUIRED)
+    ADD_DEFINITIONS( -DENABLE_KDE_SUPPORT )
+    SET( ENABLE_KDE_SUPPORT TRUE )
 ENDIF( ENABLE_KDE )
 
-if (ENABLE_PHONON)
-    FIND_PACKAGE( Phonon )
-else (ENABLE_PHONON)
-    set(PHONON_FOUND 0)
-endif (ENABLE_PHONON)
+if (ENABLE_HTTP_STREAM_PLAYBACK)
+    if (ENABLE_QT5)
+        find_package(Qt5Multimedia REQUIRED)
+        set (QTLIBS ${QTLIBS} ${Qt5Multimedia_LIBRARIES})
+        set (QTINCLUDES ${QTINCLUDES} ${Qt5Multimedia_INCLUDES})
+        add_definitions (${Qt5Multimedia_DEFINITIONS})
+    else (ENABLE_QT5)
+        find_package( Phonon REQUIRED)
+    endif (ENABLE_QT5)
+endif (ENABLE_HTTP_STREAM_PLAYBACK)
 
 if (TAGLIB_FOUND)
     set(ENABLE_TAGEDITOR_SUPPORT 1)
@@ -464,6 +466,11 @@ ELSE( ENABLE_KDE_SUPPORT )
     endif (WIN32)
 ENDIF( ENABLE_KDE_SUPPORT )
 
+if (ENABLE_HTTP_STREAM_PLAYBACK AND NOT ENABLE_QT5)
+        target_link_libraries(cantata ${PHONON_LIBS})
+        include_directories( ${PHONON_INCLUDES})
+endif (ENABLE_HTTP_STREAM_PLAYBACK AND NOT ENABLE_QT5)
+
 if (NOT WIN32)
     install(PROGRAMS dynamic/cantata-dynamic DESTINATION ${CMAKE_INSTALL_PREFIX}/share/${CMAKE_PROJECT_NAME}/scripts)
     if (MTP_FOUND)
@@ -569,7 +576,7 @@ if (TAGLIB_FOUND)
         set(AUDIOCD_SUPPORT 1)
     endif (CDDB_FOUND OR MUSICBRAINZ5_FOUND)
 
-    if (ENABLE_REMOTE_DEVICES OR PHONON_FOUND OR AUDIOCD_SUPPORT OR MTP_FOUND)
+    if (ENABLE_REMOTE_DEVICES OR ENABLE_HTTP_STREAM_PLAYBACK OR AUDIOCD_SUPPORT OR MTP_FOUND)
         message("      Extra enabled features:")
         if (ENABLE_ONLINE_SERVICES)
             message("        - Online services (Jamendo and Magnatune)")
@@ -586,21 +593,21 @@ if (TAGLIB_FOUND)
         if (ENABLE_REMOTE_DEVICES)
             message("        - Remote device sync (EXPERIMENTAL)")
         endif (ENABLE_REMOTE_DEVICES)
-        if (PHONON_FOUND)
+        if (ENABLE_HTTP_STREAM_PLAYBACK)
             message("        - MPD HTTP stream playback")
-        endif (PHONON_FOUND)
+        endif (ENABLE_HTTP_STREAM_PLAYBACK)
         if (ENABLE_REPLAYGAIN_SUPPORT)
             message("        - ReplayGain calculation")
         endif (ENABLE_REPLAYGAIN_SUPPORT)
-    endif (ENABLE_REMOTE_DEVICES OR PHONON_FOUND OR AUDIOCD_SUPPORT OR MTP_FOUND)
-    if (NOT TAGLIB_FOUND OR NOT MTP_FOUND OR NOT AUDIOCD_SUPPORT OR NOT ENABLE_REPLAYGAIN_SUPPORT OR NOT PHONON_FOUND OR NOT ENABLE_REMOTE_DEVICES OR NOT ENABLE_ONLINE_SERVICES OR (AUDIOCD_SUPPORT AND NOT LAME_FOUND))
+    endif (ENABLE_REMOTE_DEVICES OR ENABLE_HTTP_STREAM_PLAYBACK OR AUDIOCD_SUPPORT OR MTP_FOUND)
+    if (NOT TAGLIB_FOUND OR NOT MTP_FOUND OR NOT AUDIOCD_SUPPORT OR NOT ENABLE_REPLAYGAIN_SUPPORT OR NOT ENABLE_HTTP_STREAM_PLAYBACK OR NOT ENABLE_REMOTE_DEVICES OR NOT ENABLE_ONLINE_SERVICES OR (AUDIOCD_SUPPORT AND NOT LAME_FOUND))
         message("      Disabled features:")
         if (NOT ENABLE_ONLINE_SERVICES)
             message("        - Online services (Jamendo and Magnatune)")
         endif (NOT ENABLE_ONLINE_SERVICES)
-        if (NOT PHONON_FOUND)
-            message("        - MPD HTTP stream playback (phonon required)")
-        endif (NOT PHONON_FOUND)
+        if (NOT ENABLE_HTTP_STREAM_PLAYBACK)
+            message("        - MPD HTTP stream playback (Phonon required for Qt4, QtMultiMedia for Qt5)")
+        endif (NOT ENABLE_HTTP_STREAM_PLAYBACK)
         if (NOT MTP_FOUND AND NOT WIN32)
             message("        - MTP device sync (taglib and libmtp required)")
         endif (NOT MTP_FOUND AND NOT WIN32)
@@ -616,7 +623,7 @@ if (TAGLIB_FOUND)
         if(NOT ENABLE_REPLAYGAIN_SUPPORT)
             message("        - ReplayGain calculation (taglib, and ffmpeg and/or mpg123 required)")
         endif(NOT ENABLE_REPLAYGAIN_SUPPORT)
-    endif (NOT TAGLIB_FOUND OR NOT MTP_FOUND OR NOT AUDIOCD_SUPPORT OR NOT ENABLE_REPLAYGAIN_SUPPORT OR NOT PHONON_FOUND OR NOT ENABLE_REMOTE_DEVICES OR NOT ENABLE_ONLINE_SERVICES OR (AUDIOCD_SUPPORT AND NOT LAME_FOUND))
+    endif (NOT TAGLIB_FOUND OR NOT MTP_FOUND OR NOT AUDIOCD_SUPPORT OR NOT ENABLE_REPLAYGAIN_SUPPORT OR NOT ENABLE_HTTP_STREAM_PLAYBACK OR NOT ENABLE_REMOTE_DEVICES OR NOT ENABLE_ONLINE_SERVICES OR (AUDIOCD_SUPPORT AND NOT LAME_FOUND))
 
 else (TAGLIB_FOUND)
 
